GroupStrings/compile_messages.txt
main.cpp:109:14: error: no matching member function for call to 'push_back'
        expectedOne.push_back("caab");
        ~~~~~~~~~~~~^~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:705:36: note: candidate function not viable: no known conversion from 'const char [5]' to 'const std::__1::__vector_base<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'const NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(const_reference __x);
                                   ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:708:36: note: candidate function not viable: no known conversion from 'const char [5]' to 'std::__1::vector<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(value_type&& __x);
                                   ^
main.cpp:110:14: error: no matching member function for call to 'push_back'
        expectedOne.push_back("abc");
        ~~~~~~~~~~~~^~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:705:36: note: candidate function not viable: no known conversion from 'const char [4]' to 'const std::__1::__vector_base<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'const NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(const_reference __x);
                                   ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:708:36: note: candidate function not viable: no known conversion from 'const char [4]' to 'std::__1::vector<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(value_type&& __x);
                                   ^
main.cpp:111:14: error: no matching member function for call to 'push_back'
        expectedOne.push_back("bacc");
        ~~~~~~~~~~~~^~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:705:36: note: candidate function not viable: no known conversion from 'const char [5]' to 'const std::__1::__vector_base<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'const NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(const_reference __x);
                                   ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:708:36: note: candidate function not viable: no known conversion from 'const char [5]' to 'std::__1::vector<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(value_type&& __x);
                                   ^
main.cpp:114:14: error: no matching member function for call to 'push_back'
        expectedTwo.push_back("cccc");
        ~~~~~~~~~~~~^~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:705:36: note: candidate function not viable: no known conversion from 'const char [5]' to 'const std::__1::__vector_base<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'const NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(const_reference __x);
                                   ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:708:36: note: candidate function not viable: no known conversion from 'const char [5]' to 'std::__1::vector<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(value_type&& __x);
                                   ^
main.cpp:115:14: error: no matching member function for call to 'push_back'
        expectedTwo.push_back("c");
        ~~~~~~~~~~~~^~~~~~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:705:36: note: candidate function not viable: no known conversion from 'const char [2]' to 'const std::__1::__vector_base<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'const NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(const_reference __x);
                                   ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:708:36: note: candidate function not viable: no known conversion from 'const char [2]' to 'std::__1::vector<NoncopyableString, std::__1::allocator<NoncopyableString> >::value_type' (aka 'NoncopyableString') for 1st argument
    _LIBCPP_INLINE_VISIBILITY void push_back(value_type&& __x);
                                   ^
main.cpp:19:27: error: typename specifier refers to non-type member 'value_type' in 'NoncopyableString'
        map<set<typename String::value_type>, Group<String>> groups;
                ~~~~~~~~~~~~~~~~~^~~~~~~~~~
main.cpp:105:16: note: in instantiation of function template specialization 'GroupHeavyStrings<NoncopyableString>' requested here
        auto groups = GroupHeavyStrings(strings);
                      ^
main.cpp:36:7: note: referenced member 'value_type' is declared here
        char value_type;
             ^
6 errors generated.
